Add Nullness check